<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_login"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.helotani.ui.home.HomeFragment"
        android:label="@string/home_login"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.helotani.ui.history.HistoryFragment"
        android:label="@string/history_login"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.helotani.ui.setting.SettingsFragment"
        android:label="@string/setting_login"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.helotani.ui.profile.ProfileFragment"
        android:label="@string/profile_login"
        tools:layout="@layout/fragment_profile" />
</navigation>